made song title more prominent on singlealbum page

--- a/client/src/pages/Albums/SingleAlbum.module.css
+++ b/client/src/pages/Albums/SingleAlbum.module.css
@@ -88,3 +88,10 @@
     height: 16px;
     border-radius: 4px;
 }
+
+.songTitle {
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: 600;
+    color: #7C3AED;
+}
